--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-pandas
-plotly
-openpyxl
-streamlit-authenticator
-PyYAML
-bcrypt
-streamlit_qrcode_scanner 
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.15.0
+streamlit-authenticator>=0.2.3
+pyyaml>=6.0
+streamlit-qrcode-scanner>=0.1.2
+openpyxl>=3.1.0
